--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site wide configuration
 
-title: "Skinny Bones"
+title: "vivshaw"
 description: "A lightweight site starter for Jekyll"
 logo: 120x120.gif
 teaser: 400x250.gif
 locale: en_US
-url: "https://mmistakes.github.io/skinny-bones-jekyll"
+url: "https://vivshaw.github.io/vivshaw-next"
 feed:
   path: atom.xml
 
