--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site wide configuration
 
 title: "vivshaw"
-description: "A lightweight site starter for Jekyll"
+description: "portfolio site"
 logo: 120x120.gif
 teaser: 400x250.gif
 locale: en_US
