Update owner data

--- a/_config.yml
+++ b/_config.yml
@@ -26,15 +26,15 @@ gems:
 
 # Site owner
 owner:
-  name: "Michael Rose"
-  web: "https://mademistakes.com"
-  twitter: "mmistakes"
-  bio: "Just another boring, tattooed, time traveling designer."
+  name: "Hannah Vivian Shaw"
+  web: "https://vivshaw.github.io"
+  twitter: "irreduce"
+  bio: "TO-DO"
   avatar: "bio-photo.jpg" # 160x160 px image for author byline
   google:
-    plus: "+MichaelRoseDesign"
-    ad-client: "ca-pub-7328585512091257"
-    ad-slot: 3049671934
+    plus:
+    ad-client:
+    ad-slot:
   disqus-shortname:
 
 
