--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "skinny-bones-jekyll",
+  "name": "vivshaw.github.io",
   "version": "1.0.0",
   "private": true,
-  "description": "A Jekyll starter site",
-  "author": "Michael Rose <michael@mademistakes.com>",
-  "homepage": "http://mademistakes.com/",
+  "description": "vivshaw's GitHub Pages blog",
+  "author": "Hannah Vivian Shaw <hvivianshaw@gmail.com>",
+  "homepage": "http://vivshaw.github.io/",
   "license": "The MIT License (MIT)",
   "devDependencies": {
     "grunt": "~0.4.2",
