Fix footer links to blog and work

--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -4,10 +4,10 @@
   url: /
 
 - title: Blog
-  url: /articles/
+  url: /blog/
 
 - title: Work
-  url: /media/
+  url: /work/
 
 - title: About
   url: /about/
