Add an author bio and pic

--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ owner:
   name: "Hannah Vivian Shaw"
   web: "https://vivshaw.github.io"
   twitter: "irreduce"
-  bio: "TO-DO"
+  bio: "the command line is the retina of the mind's eye"
   avatar: "bio-photo.jpg" # 160x160 px image for author byline
   google:
     plus:
