Add a logo and default teaser

--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 
 title: "vivshaw"
 description: "portfolio site"
-logo: 120x120.gif
-teaser: 400x250.gif
+logo: logo.png
+teaser: default-python-teaser
 locale: en_US
 url: "https://vivshaw.github.io/vivshaw-next"
 feed:
