Fix broken teaser link

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 title: "vivshaw"
 description: "portfolio site"
 logo: logo.png
-teaser: default-python-teaser
+teaser: default-python-teaser.png
 locale: en_US
 url: "https://vivshaw.github.io/vivshaw-next"
 feed:
