Change site.url to fix links in new deployment

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: "portfolio site"
 logo: logo.png
 teaser: default-python-teaser.png
 locale: en_US
-url: "https://vivshaw.github.io/vivshaw-next"
+url: "https://vivshaw.github.io"
 feed:
   path: atom.xml
 
