--- a/package.json
+++ b/package.json
@@ -6,17 +6,20 @@
     "start": "next start"
   },
   "dependencies": {
-    "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mdx-js/loader": "^1.5.1",
     "@mdx-js/react": "^1.6.18",
+    "@next/font": "^13.0.4",
     "@next/mdx": "^9.1.1",
     "lodash": "^4.17.21",
     "next": "latest",
+    "prism-react-renderer": "^1.3.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-medium-image-zoom": "^5.1.2",
+    "react-outside-click-handler": "^1.3.0",
+    "remark-prism": "^1.3.6",
     "theme-ui": "^0.15.4"
   },
   "devDependencies": {
