author page works!

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,12 @@
     "isolatedModules": true,
     "jsx": "preserve"
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "pages/_app.js"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "pages/index.js",
+    "pages/_app.js"
+  ],
   "exclude": ["node_modules"]
 }
