--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mdx-js/react": "^1.6.18",
     "@next/font": "^13.0.4",
     "@next/mdx": "^9.1.1",
+    "@types/mdx": "^2.0.3",
     "lodash": "^4.17.21",
     "next": "latest",
     "react": "^18.2.0",
