--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/mdx": "^2.0.3",
     "lodash": "^4.17.21",
     "next": "latest",
+    "next-pwa": "^5.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remark-prism": "^1.3.6",
