--- a/package.json
+++ b/package.json
@@ -1,5 +1,18 @@
 {
+  "name": "vivshaw.net",
+  "description": "vivshaw's personal website",
+  "homepage": "https://vivshaw.net",
+    "repository": {
+      "type": "git",
+      "url": "https://github.com/vivshaw/vivshaw.net.git"
+    },
   "private": true,
+  "license": "MIT",
+  "author": {
+    "name": "vivshaw",
+    "email": "hvivianshaw@gmail.com",
+    "url": "https://vivshaw.net"
+  },
   "scripts": {
     "dev": "next",
     "build": "next build",
