--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@next/mdx": "^9.1.1",
     "@types/mdx": "^2.0.3",
     "lodash": "^4.17.21",
-    "next": "latest",
+    "next": "^14.1.3",
     "next-pwa": "^5.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
