--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "format:all": "prettier --write ."
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -28,6 +29,7 @@
     "lodash": "^4.17.21",
     "next": "^14.1.3",
     "next-pwa": "^5.6.0",
+    "prettier": "^3.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remark-prism": "^1.3.6",
