--- a/public/manifest.json
+++ b/public/manifest.json
@@ -13,8 +13,8 @@
       "type": "image/png"
     }
   ],
-  "name": "vivshaw.net",
-  "short_name": "vivshaw.net",
+  "name": "vivshaw's webbed site",
+  "short_name": "vivsha.ws",
   "start_url": "/",
   "theme_color": "#000000"
 }
