chore: move the repo to the new name, vivsha.ws

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "homepage": "https://vivsha.ws",
   "repository": {
     "type": "git",
-    "url": "https://github.com/vivshaw/vivshaw.net.git"
+    "url": "https://github.com/vivshaw/vivsha.ws.git"
   },
   "private": true,
   "license": "MIT",
