feat: improve manifest.json & lean in on some silly verbiage :)

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vivsha.ws",
-  "description": "vivshaw's webbed site",
+  "description": "vivshaw's webbed sight",
   "homepage": "https://vivsha.ws",
   "repository": {
     "type": "git",
