--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@mdx-js/react": "^1.6.18",
     "@next/mdx": "^9.1.1",
     "@types/mdx": "^2.0.3",
+    "@vanilla-extract/css": "^1.17.0",
     "lodash": "^4.17.21",
     "next": "^14.1.3",
     "next-pwa": "^5.6.0",
@@ -38,6 +39,7 @@
   "devDependencies": {
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
+    "@vanilla-extract/next-plugin": "^2.4.8",
     "typescript": "4.9.3"
   }
 }
