--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@next/mdx": "^9.1.1",
     "@types/mdx": "^2.0.3",
     "@vanilla-extract/css": "^1.17.0",
+    "clsx": "^2.1.1",
     "lodash": "^4.17.21",
     "next": "^14.1.3",
     "next-pwa": "^5.6.0",
