--- a/package.json
+++ b/package.json
@@ -20,8 +20,6 @@
     "format:all": "prettier --write ."
   },
   "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
     "@mdx-js/loader": "^1.5.1",
     "@mdx-js/react": "^1.6.18",
     "@next/mdx": "^9.1.1",
@@ -35,8 +33,7 @@
     "prettier": "^3.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "remark-prism": "^1.3.6",
-    "theme-ui": "^0.15.4"
+    "remark-prism": "^1.3.6"
   },
   "devDependencies": {
     "@types/node": "18.11.9",
