--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,7 @@
 {
-  "recommendations": ["esbenp.prettier-vscode", "GitHub.vscode-github-actions"]
+  "recommendations": [
+    "esbenp.prettier-vscode",
+    "GitHub.vscode-github-actions",
+    "unifiedjs.vscode-mdx"
+  ]
 }
