chore: update next dev command for clarity

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "url": "https://vivsha.ws"
   },
   "scripts": {
-    "dev": "next",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "format:all": "prettier --write ."
