--- a/package.json
+++ b/package.json
@@ -20,14 +20,14 @@
     "format:all": "prettier --write ."
   },
   "dependencies": {
-    "@mdx-js/loader": "^1.5.1",
-    "@mdx-js/react": "^1.6.18",
-    "@next/mdx": "^9.1.1",
+    "@mdx-js/loader": "3.1.0",
+    "@mdx-js/react": "3.1.0",
+    "@next/mdx": "14.1.1",
     "@vanilla-extract/css": "^1.17.0",
     "@vanilla-extract/recipes": "^0.5.5",
     "clsx": "^2.1.1",
     "lodash": "^4.17.21",
-    "next": "^14.1.3",
+    "next": "14.2.22",
     "next-pwa": "^5.6.0",
     "prettier": "^3.4.2",
     "react": "^18.2.0",
