--- a/package.json
+++ b/package.json
@@ -22,23 +22,26 @@
   "dependencies": {
     "@mdx-js/loader": "3.1.0",
     "@mdx-js/react": "3.1.0",
-    "@next/mdx": "14.1.1",
+    "@next/mdx": "15.1.3",
     "@vanilla-extract/css": "^1.17.0",
     "@vanilla-extract/recipes": "^0.5.5",
     "clsx": "^2.1.1",
     "lodash": "^4.17.21",
-    "next": "14.2.22",
+    "next": "15.1.3",
     "next-pwa": "^5.6.0",
     "prettier": "^3.4.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "remark-prism": "^1.3.6"
   },
   "devDependencies": {
     "@types/mdx": "^2.0.13",
     "@types/node": "18.11.9",
-    "@types/react": "18.0.25",
+    "@types/react": "19.0.2",
     "@vanilla-extract/next-plugin": "^2.4.8",
     "typescript": "4.9.3"
+  },
+  "resolutions": {
+    "@types/react": "19.0.2"
   }
 }
