--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "#*": ["./*"]
+      "#*": ["./src/*"]
     },
     "target": "es2015",
     "lib": ["dom", "dom.iterable", "esnext"],
