--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/node": "18.11.9",
     "@types/react": "19.0.2",
     "@vanilla-extract/next-plugin": "^2.4.8",
+    "schema-dts": "^1.1.2",
     "typescript": "4.9.3"
   },
   "resolutions": {
