--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
     "@mdx-js/loader": "3.1.0",
     "@mdx-js/react": "3.1.0",
     "@next/mdx": "15.1.3",
+    "@serwist/next": "^9.0.11",
     "@vanilla-extract/css": "^1.17.0",
     "@vanilla-extract/recipes": "^0.5.5",
     "clsx": "^2.1.1",
     "lodash": "^4.17.21",
     "next": "15.1.3",
-    "next-pwa": "^5.6.0",
     "prettier": "^3.4.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -40,6 +40,7 @@
     "@types/react": "19.0.2",
     "@vanilla-extract/next-plugin": "^2.4.8",
     "schema-dts": "^1.1.2",
+    "serwist": "^9.0.11",
     "typescript": "4.9.3"
   },
   "resolutions": {
