--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@mdx-js/loader": "3.1.0",
     "@mdx-js/react": "3.1.0",
+    "@next/bundle-analyzer": "^15.1.3",
     "@next/mdx": "15.1.3",
     "@serwist/next": "^9.0.11",
     "@vanilla-extract/css": "^1.17.0",
