--- a/package.json
+++ b/package.json
@@ -14,39 +14,10 @@
     "url": "https://vivsha.ws"
   },
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "format:all": "prettier --write ."
-  },
-  "dependencies": {
-    "@mdx-js/loader": "3.1.0",
-    "@mdx-js/react": "3.1.0",
-    "@next/bundle-analyzer": "^15.1.3",
-    "@next/mdx": "15.1.3",
-    "@serwist/next": "^9.0.11",
-    "@vanilla-extract/css": "^1.17.0",
-    "@vanilla-extract/recipes": "^0.5.5",
-    "clsx": "^2.1.1",
-    "lodash": "^4.17.21",
-    "next": "15.1.3",
-    "prettier": "^3.4.2",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "remark-gfm": "^4.0.0",
-    "remark-prism": "^1.3.6"
-  },
-  "devDependencies": {
-    "@types/mdx": "^2.0.13",
-    "@types/node": "18.11.9",
-    "@types/react": "19.0.2",
-    "@vanilla-extract/next-plugin": "^2.4.8",
-    "schema-dts": "^1.1.2",
-    "serwist": "^9.0.11",
-    "typescript": "4.9.3"
-  },
-  "resolutions": {
-    "@types/react": "19.0.2"
+    "build": "yarn apps/vivsha.ws build",
+    "dev": "yarn apps/vivsha.ws dev",
+    "format:all": "prettier --write .",
+    "start": "yarn apps/vivsha.ws start"
   },
   "workspaces": [
     "apps/*",
