--- a/packages/mdx/package.json
+++ b/packages/mdx/package.json
@@ -13,6 +13,9 @@
     "email": "hey@vivsha.ws",
     "url": "https://vivsha.ws"
   },
+  "scripts": {
+    "bar": "echo \"HELLO\""
+  },
   "peerDependencies": {
     "@vanilla-extract/css": "^1.17.0",
     "clsx": "^2.1.1",
