--- a/apps/vivsha.ws/package.json
+++ b/apps/vivsha.ws/package.json
@@ -33,7 +33,9 @@
     "prettier": "^3.4.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "remark-frontmatter": "^5.0.0",
     "remark-gfm": "^4.0.0",
+    "remark-mdx-frontmatter": "^5.0.0",
     "remark-prism": "^1.3.6"
   },
   "devDependencies": {
