--- a/apps/vivsha.ws/package.json
+++ b/apps/vivsha.ws/package.json
@@ -36,7 +36,8 @@
     "remark-frontmatter": "^5.0.0",
     "remark-gfm": "^4.0.0",
     "remark-mdx-frontmatter": "^5.0.0",
-    "remark-prism": "^1.3.6"
+    "remark-prism": "^1.3.6",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/mdx": "^2.0.13",
