--- a/packages/viriditas/package.json
+++ b/packages/viriditas/package.json
@@ -22,8 +22,8 @@
     "@types/react": "19.0.2"
   },
   "exports": {
-    "./context": "./context.tsx",
+    "./client": "./client/index.tsx",
     "./reset": "./reset.css.ts",
-    "./theme": "./theme/theme.css.ts"
+    "./theme": "./theme/index.css.ts"
   }
 }
