--- a/packages/viriditas/package.json
+++ b/packages/viriditas/package.json
@@ -23,6 +23,7 @@
   },
   "exports": {
     "./client": "./client/index.tsx",
+    "./helpers": "./helpers/index.css.ts",
     "./reset": "./reset.css.ts",
     "./theme": "./theme/index.css.ts"
   }
