--- a/apps/vivsha.ws/package.json
+++ b/apps/vivsha.ws/package.json
@@ -46,7 +46,7 @@
     "@vanilla-extract/next-plugin": "^2.4.8",
     "schema-dts": "^1.1.2",
     "serwist": "^9.0.11",
-    "typescript": "4.9.3"
+    "typescript": "^5.3.3"
   },
   "resolutions": {
     "@types/react": "19.0.2"
