--- a/apps/vivsha.ws/package.json
+++ b/apps/vivsha.ws/package.json
@@ -27,6 +27,8 @@
     "@serwist/next": "^9.0.11",
     "@vanilla-extract/css": "^1.17.0",
     "@vanilla-extract/recipes": "^0.5.5",
+    "@vivshaw/mdx": "workspace:^",
+    "@vivshaw/viriditas": "workspace:^",
     "clsx": "^2.1.1",
     "lodash": "^4.17.21",
     "next": "15.1.3",
