--- a/packages/mdx/package.json
+++ b/packages/mdx/package.json
@@ -16,6 +16,9 @@
   "scripts": {
     "bar": "echo \"HELLO\""
   },
+  "dependencies": {
+    "@vivshaw/viriditas": "workspace:^"
+  },
   "peerDependencies": {
     "@vanilla-extract/css": "^1.17.0",
     "clsx": "^2.1.1",
