--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+node_modules
 
 # Yarn Berry stuff
 .pnp.*
@@ -45,3 +45,4 @@ next-env.d.ts
 # generated Service Worker files
 public/sw*
 public/swe-worker*
+*storybook.log
