--- a/packages/viriditas/package.json
+++ b/packages/viriditas/package.json
@@ -26,5 +26,20 @@
     "./client": "./client/index.tsx",
     "./helpers": "./helpers/index.css.ts",
     "./reset": "./reset.css.ts"
+  },
+  "devDependencies": {
+    "@storybook/addon-essentials": "^8.6.14",
+    "@storybook/addon-interactions": "^8.6.14",
+    "@storybook/blocks": "^8.6.14",
+    "@storybook/react": "^8.6.14",
+    "@storybook/react-vite": "^8.6.14",
+    "@storybook/test": "^8.6.14",
+    "@vanilla-extract/vite-plugin": "^5.0.2",
+    "@vitejs/plugin-react": "^4.5.0",
+    "storybook": "^8.6.14"
+  },
+  "scripts": {
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   }
 }
