--- a/packages/viriditas/package.json
+++ b/packages/viriditas/package.json
@@ -25,7 +25,11 @@
     ".": "./index.ts",
     "./client": "./client/index.tsx",
     "./helpers": "./helpers/index.css.ts",
-    "./reset": "./reset.css.ts"
+    "./reset": "./reset.css.ts",
+    "./components": "./components/index.ts"
+  },
+  "dependencies": {
+    "clsx": "^2.1.1"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^8.6.14",
