--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "hygen": "^6.2.11"
   },
   "dependencies": {
+    "@vanilla-extract/recipes": "^0.5.7",
     "@vanilla-extract/sprinkles": "^1.6.3"
   }
 }
