feat: improve tsconfigs, get a working typecheck command, and fix some type errors

--- a/apps/vivsha.ws/package.json
+++ b/apps/vivsha.ws/package.json
@@ -17,7 +17,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "format:all": "prettier --write ."
+    "format:all": "prettier --write .",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@mdx-js/loader": "3.1.0",
