--- a/package.json
+++ b/package.json
@@ -18,14 +18,16 @@
     "dev": "yarn apps/vivsha.ws dev",
     "format:all": "prettier --write .",
     "start": "yarn apps/vivsha.ws start",
-    "new:post": "hygen post new"
+    "new:post": "hygen post new",
+    "typecheck": "yarn workspace @vivshaw/vivsha.ws typecheck && yarn workspace @vivshaw/viriditas typecheck && yarn workspace @vivshaw/mdx typecheck"
   },
   "workspaces": [
     "apps/*",
     "packages/*"
   ],
   "devDependencies": {
-    "hygen": "^6.2.11"
+    "hygen": "^6.2.11",
+    "typescript": "^5.3.3"
   },
   "dependencies": {
     "@vanilla-extract/recipes": "^0.5.7",
