--- a/packages/mdx/package.json
+++ b/packages/mdx/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vivshaw/mdx",
-  "description": "prebuilt MDX components, styled with Viriditas",
+  "description": "prebuilt MDX components, styled with Basalt",
   "homepage": "https://vivsha.ws",
   "repository": {
     "type": "git",
@@ -18,7 +18,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@vivshaw/viriditas": "workspace:^"
+    "@vivshaw/basalt": "workspace:^"
   },
   "peerDependencies": {
     "@vanilla-extract/css": "^1.17.0",
