--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   ],
   "devDependencies": {
     "hygen": "^6.2.11",
+    "prettier": "^3.4.2",
     "typescript": "^5.3.3"
   },
   "dependencies": {
