--- a/packages/basalt/package.json
+++ b/packages/basalt/package.json
@@ -42,6 +42,7 @@
     "storybook": "^8.6.14"
   },
   "scripts": {
+    "format:all": "prettier --write .",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "typecheck": "tsc --noEmit"
