--- a/apps/vivsha.ws/public/manifest.json
+++ b/apps/vivsha.ws/public/manifest.json
@@ -1,18 +1,20 @@
 {
-  "background_color": "#000000",
+  "background_color": "#111216",
   "categories": ["software", "blog", "personal", "machine learning", "human-computer interaction"],
   "description": "Hannah Vivian Shaw's personal website & blog",
   "display": "browser",
   "icons": [
     {
-      "src": "/android-chrome-192x192.png",
+      "src": "/web-app-manifest-192x192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "maskable"
     },
     {
-      "src": "/android-chrome-512x512.png",
+      "src": "/web-app-manifest-512x512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "maskable"
     }
   ],
   "id": "https://vivsha.ws",
@@ -20,5 +22,5 @@
   "orientation": "portrait",
   "short_name": "vivshaw's",
   "start_url": "/",
-  "theme_color": "#000000"
+  "theme_color": "#111216"
 }
