--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "@vanilla-extract/recipes": "^0.5.7",
-    "@vanilla-extract/sprinkles": "^1.6.3"
+    "@vanilla-extract/sprinkles": "^1.6.3",
+    "remark-github-blockquote-alert": "^2.0.1"
   }
 }
