--- a/packages/basalt/package.json
+++ b/packages/basalt/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "@storybook/addon-essentials": "^8.6.14",
     "@storybook/addon-interactions": "^8.6.14",
+    "@storybook/addon-themes": "8.6.14",
     "@storybook/blocks": "^8.6.14",
     "@storybook/react": "^8.6.14",
     "@storybook/react-vite": "^8.6.14",
