feat(blog, MDX): simplify image loading, allow using normal Markdown syntax

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@shikijs/transformers": "^3.21.0",
     "hygen": "^6.2.11",
     "prettier": "^3.4.2",
+    "rehype-mdx-import-media": "^1.2.0",
     "shiki": "^3.21.0",
     "typescript": "^5.3.3"
   },
