--- a/packages/basalt/package.json
+++ b/packages/basalt/package.json
@@ -33,14 +33,14 @@
   "devDependencies": {
     "@storybook/addon-essentials": "^8.6.14",
     "@storybook/addon-interactions": "^8.6.14",
-    "@storybook/addon-themes": "8.6.14",
     "@storybook/blocks": "^8.6.14",
     "@storybook/react": "^8.6.14",
     "@storybook/react-vite": "^8.6.14",
     "@storybook/test": "^8.6.14",
     "@vanilla-extract/vite-plugin": "^5.0.2",
     "@vitejs/plugin-react": "^4.5.0",
-    "storybook": "^8.6.14"
+    "storybook": "^8.6.14",
+    "storybook-dark-mode": "^4.0.2"
   },
   "scripts": {
     "format:all": "prettier --write .",
