feat(Basalt, styles): begin porting styles to CSS Modules, starting with theme
this will be a huge project! but, i feel pretty confident that Basalt is
now organized enough to make it relatively doable. starting with the
theme, then working outward from there.

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@shikijs/rehype": "^3.21.0",
     "@shikijs/transformers": "^3.21.0",
     "hygen": "^6.2.11",
+    "postcss-mixins": "^12.1.2",
     "prettier": "^3.4.2",
     "rehype-mdx-import-media": "^1.2.0",
     "shiki": "^3.21.0",
