--- a/packages/basalt/package.json
+++ b/packages/basalt/package.json
@@ -14,7 +14,6 @@
     "url": "https://vivsha.ws"
   },
   "peerDependencies": {
-    "@vanilla-extract/css": "^1.17.0",
     "react": "19.0.0",
     "typescript": "4.9.3"
   },
@@ -23,13 +22,9 @@
   },
   "exports": {
     ".": "./index.ts",
-    "./reset": "./reset.css.ts",
+    "./config": "./config.ts",
     "./components": "./components/index.ts",
-    "./css": "./css/index.css",
-    "./css/tokens": "./css/tokens.css",
-    "./css/fonts": "./css/fonts.css",
-    "./css/reset": "./css/reset.css",
-    "./css/mixins": "./css/mixins.css"
+    "./css": "./css/index.css"
   },
   "dependencies": {
     "clsx": "^2.1.1"
@@ -41,10 +36,10 @@
     "@storybook/react": "^8.6.14",
     "@storybook/react-vite": "^8.6.14",
     "@storybook/test": "^8.6.14",
-    "@vanilla-extract/vite-plugin": "^5.0.2",
     "@vitejs/plugin-react": "^4.5.0",
     "storybook": "^8.6.14",
-    "storybook-dark-mode": "^4.0.2"
+    "storybook-dark-mode": "^4.0.2",
+    "vite": "^6.1.0"
   },
   "scripts": {
     "format:all": "prettier --write .",
