feat(MDX): add a Storybook and full basic coverage to MDX package

--- a/packages/mdx/package.json
+++ b/packages/mdx/package.json
@@ -15,6 +15,8 @@
   },
   "scripts": {
     "format:all": "prettier --write .",
+    "storybook": "storybook dev -p 6007",
+    "build-storybook": "storybook build",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
@@ -27,5 +29,17 @@
   },
   "resolutions": {
     "@types/react": "19.0.2"
+  },
+  "devDependencies": {
+    "@storybook/addon-essentials": "^8.6.14",
+    "@storybook/addon-interactions": "^8.6.14",
+    "@storybook/blocks": "^8.6.14",
+    "@storybook/react": "^8.6.14",
+    "@storybook/react-vite": "^8.6.14",
+    "@storybook/test": "^8.6.14",
+    "@vitejs/plugin-react": "^4.5.0",
+    "storybook": "^8.6.14",
+    "storybook-dark-mode": "^4.0.2",
+    "vite": "^6.1.0"
   }
 }
