--- a/packages/rehype-smallcap-words/package.json
+++ b/packages/rehype-smallcap-words/package.json
@@ -7,6 +7,9 @@
   "exports": {
     ".": "./index.mjs"
   },
+  "scripts": {
+    "test": "node --test"
+  },
   "dependencies": {
     "unist-util-visit": "^5.0.0"
   }
