--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "prettier": "^3.4.2",
     "rehype-mdx-import-media": "^1.2.0",
     "shiki": "^3.21.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "typescript-plugin-css-modules": "^5.2.0"
   },
   "dependencies": {
     "remark-github-blockquote-alert": "^2.0.1"
