chore(root): set up linting and lint app

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "build": "yarn apps/vivsha.ws build",
     "dev": "yarn apps/vivsha.ws dev",
     "format:all": "prettier --write .",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "start": "yarn apps/vivsha.ws start",
     "new:post": "hygen post new",
     "test": "yarn workspace @vivshaw/rehype-smallcap-words test && yarn workspace @vivshaw/rehype-sidenotes test",
@@ -27,14 +29,25 @@
     "packages/*"
   ],
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
+    "@next/eslint-plugin-next": "^16.1.6",
     "@shikijs/rehype": "^3.21.0",
     "@shikijs/transformers": "^3.21.0",
+    "eslint": "^9.39.2",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "globals": "^17.3.0",
     "hygen": "^6.2.11",
     "postcss-mixins": "^12.1.2",
     "prettier": "^3.4.2",
     "rehype-mdx-import-media": "^1.2.0",
     "shiki": "^3.21.0",
     "typescript": "^5.3.3",
+    "typescript-eslint": "^8.54.0",
     "typescript-plugin-css-modules": "^5.2.0"
   },
   "dependencies": {
