--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
     "build": "yarn apps/vivsha.ws build",
     "dev": "yarn apps/vivsha.ws dev",
     "format:all": "prettier --write .",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
+    "lint": "yarn lint:js && yarn lint:css",
+    "lint:fix": "yarn lint:js:fix && yarn lint:css:fix",
+    "lint:js": "eslint .",
+    "lint:js:fix": "eslint . --fix",
+    "lint:css": "stylelint \"**/*.css\"",
+    "lint:css:fix": "stylelint \"**/*.css\" --fix",
     "start": "yarn apps/vivsha.ws start",
     "new:post": "hygen post new",
     "test": "yarn workspace @vivshaw/rehype-smallcap-words test && yarn workspace @vivshaw/rehype-sidenotes test",
@@ -46,6 +50,8 @@
     "prettier": "^3.4.2",
     "rehype-mdx-import-media": "^1.2.0",
     "shiki": "^3.21.0",
+    "stylelint": "^17.1.1",
+    "stylelint-config-standard": "^40.0.0",
     "typescript": "^5.3.3",
     "typescript-eslint": "^8.54.0",
     "typescript-plugin-css-modules": "^5.2.0"
