--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "start": "yarn apps/vivsha.ws start",
     "new:post": "hygen post new",
     "test": "yarn workspace @vivshaw/rehype-smallcap-words test && yarn workspace @vivshaw/rehype-sidenotes test",
-    "typecheck": "yarn workspace @vivshaw/vivsha.ws typecheck && yarn workspace @vivshaw/basalt typecheck && yarn workspace @vivshaw/basalt-mdx typecheck"
+    "test:quiet": "yarn workspace @vivshaw/rehype-smallcap-words test:quiet && yarn workspace @vivshaw/rehype-sidenotes test:quiet",
+    "typecheck": "yarn workspace @vivshaw/vivsha.ws typecheck && yarn workspace @vivshaw/basalt typecheck && yarn workspace @vivshaw/basalt-mdx typecheck",
+    "prepare": "husky"
   },
   "workspaces": [
     "apps/*",
@@ -45,7 +47,9 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
     "globals": "^17.3.0",
+    "husky": "^9.1.7",
     "hygen": "^6.2.11",
+    "lint-staged": "^16.2.7",
     "postcss-mixins": "^12.1.2",
     "prettier": "^3.4.2",
     "rehype-mdx-import-media": "^1.2.0",
@@ -58,5 +62,18 @@
   },
   "dependencies": {
     "remark-github-blockquote-alert": "^2.0.1"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,mjs}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.css": [
+      "stylelint --fix",
+      "prettier --write"
+    ],
+    "*.{json,md,mdx,yml,yaml}": [
+      "prettier --write"
+    ]
   }
 }
