--- a/packages/rehype-smallcap-words/package.json
+++ b/packages/rehype-smallcap-words/package.json
@@ -8,7 +8,8 @@
     ".": "./index.mjs"
   },
   "scripts": {
-    "test": "node --test"
+    "test": "node --test",
+    "test:quiet": "node --test --test-reporter=dot"
   },
   "dependencies": {
     "unist-util-visit": "^5.0.0"
